fix for iphone whitespace

--- a/index.css
+++ b/index.css
@@ -287,3 +287,13 @@ tr.qual-row > td {
     visibility: hidden;
   }
 }
+
+@media all and (max-width: 355px) and (max-height: 568px) {
+  .intro {
+    padding-bottom: 15px;
+  }
+  .intro img {
+    height: 105vh;
+    width: 105%;
+  }
+}
